[package]
name = "fungible"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
test = []

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
futures = "0.3.24"
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299" }
serde = { version = "1.0.217", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
fungible = { git = "https://github.com/bhaagiKenpachi/linera-fungible", rev = "4c417eb", features = ["test"] }
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299", features = ["test", "wasmer"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "fungible_contract"
path = "src/contract.rs"

[[bin]]
name = "fungible_service"
path = "src/service.rs"
